<resources>
    <!-- Main activity strings -->
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="imageView_desc">Movie poster image</string>

    <!-- Label for "sort by" preference -->
    <string name="pref_sortBy_label">Sort Movies By</string>
    <!-- Key name for storing sort in SharedPreferences -->
    <string name="pref_sortBy_key" translatable="false">sortBy</string>

    <!-- Labels for sort values -->
    <string name="sort_popular_label">Most Popular</string>
    <string name="sort_rating_label">Highest Rating</string>
    <!-- Key name for storing sort value in SharedPreferences -->
    <string name="sort_popular_key" translatable="false">popular</string>
    <string name="sort_rating_key" translatable="false">top_rated</string>
    <!-- Default "sort by" preference [CHAR LIMIT=NONE]-->
    <string name="pref_sortBy_default" translatable="false">popular</string>

    <!-- Arrays used for sort preference spinner -->
    <string-array name="sortBy_entries">
        <item>@string/sort_popular_label</item>
        <item>@string/sort_rating_label</item>
    </string-array>

    <string-array name="sortBy_values">
        <item>@string/sort_popular_key</item>
        <item>@string/sort_rating_key</item>
    </string-array>

    <!-- Detail activity strings -->
    <string name="title_activity_details">Details</string>
    <string name="details_movieTitle">Movie Title</string>
    <string name="details_movieSynopsis">Movie synopsis (overview)</string>
    <string name="details_releaseDate">Year</string>
    <string name="details_userRating">User rating</string>
    <string name="details_dateTitle">Release Date</string>
    <string name="details_ratingTitle">Rating</string>

</resources>
