<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsActivityFragment"
    tools:showIn="@layout/activity_details">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/details_movieTitle"
            android:id="@+id/details_movieTitle_textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="28sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_poster_imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="@string/imageView_desc"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_alignTop="@+id/details_dateTitle_textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/details_movieSynopsis"
            android:id="@+id/details_movieSynopsis_textView"
            android:layout_below="@+id/details_poster_imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:text="@string/details_dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_dateTitle_textView"
            android:layout_below="@+id/details_movieTitle_textView"
            android:layout_toRightOf="@+id/details_poster_imageView"
            android:layout_toEndOf="@+id/details_poster_imageView"
            android:layout_marginTop="19dp"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/details_ratingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:id="@+id/details_ratingTitle_textView"
            android:textSize="18sp"
            android:layout_below="@+id/details_releaseDate_textView"
            android:layout_toRightOf="@+id/details_poster_imageView"
            android:layout_toEndOf="@+id/details_poster_imageView"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_releaseDate"
            android:id="@+id/details_releaseDate_textView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:textStyle="normal|italic"
            android:layout_below="@+id/details_dateTitle_textView"
            android:layout_toRightOf="@+id/details_poster_imageView"
            android:layout_toEndOf="@+id/details_poster_imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/details_userRating"
            android:id="@+id/details_userRating_textView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="italic"
            android:layout_below="@+id/details_ratingTitle_textView"
            android:layout_toRightOf="@+id/details_poster_imageView"
            android:layout_toEndOf="@+id/details_poster_imageView" />
    </RelativeLayout>

</ScrollView>
